style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Contrail+One&display=swap');

.triangle_down {
	width: 0;
	height: 0;
	border-left: 15px solid transparent;
	border-right: 15px solid transparent;
	border-top: 17px solid #000000;
  float: right;
}

/* This is the box that you can click on */
.accordion {
  background-color: hsl(51, 69%, 89%);
  color: #000000;
  cursor: pointer;
  padding: 18px;
  margin: 20px auto;
  width: 100%;
  border: none;
  text-align: left;
  outline: none;
  font-size: clamp(1rem, calc(1.5vw + 0.5rem), 1.25rem);
  transition: 0.4s;
  border-radius: 25px;
  font-family: "Funnel Sans", sans-serif;
  box-shadow: #2f3827 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
}

.active, .accordion:hover {
  background-color: hsl(19, 63%, 24%);
  color: hsl(23, 66%, 50%);
}

.panel {
  width: 100%; /* Match the accordion button width */
  margin: 20px auto; 
  padding:18px;
  display: none;
  background-color: hsl(23, 66%, 50%);
  border-radius: 25px;
  overflow: hidden;
  box-shadow: hsl(19, 63%, 24%) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
}

/*Modal for Gallery*/
.pop_up_image {
	/*The styling for the image container that pops up when clicked*/
	position: fixed;
	/*Makes the image stay in the same place even when scrolling*/
	top: 0;
	/*Positions the container at the center, using the top left cornor*/
	left: 0;
	background: rgba(0, 0, 0, 0.9);
	/*Makes the rest of the page dark*/
	height: 100%;
	/*Makes the container take up the whole height and width*/
	width: 100%;
	z-index: 100;
	/*Puts it in front of the other elemts*/
	display: none;
	/*Doesn't show until the image is clicked on*/
}
.pop_up_image span {
	/*Used to creat the close button X*/
	position: absolute;
	/*Makes it possible to position using top and right*/
	top: 0;
	/*Puts it near the top right corner, 10px from the right*/
	right: 10px;
	font-size: 40px;
	font-weight: bolder;
	/*Makes it bold for easier visibility*/
	color: hsl(51, 69%, 89%);
	cursor: pointer;
	/*Makes the cursor a pointer to tell the user it can be clicked on*/
	z-index: 100;
	/*Puts it in front of the rest of the page*/
}
.pop_up_image img {
	position: absolute;
	/*Makes it so the image can be controlled using top and left*/
	top: 50%;
	/*Puts it top left corner at the center*/
	left: 50%;
	transform: translate(-50%, -50%);
	/*moves it so the middle point is at the center*/
	border: 5px solid hsl(51, 69%, 89%);
  width: 80%;
  height: 70%;
  border-radius: 25px;
	object-fit: cover;
	/*Makes the aspect ratio stay the same in all device sizes*/
}

/* sets a margin on the body */
body {
  margin: 0;
}

.arrow {
  border: solid hsl(51, 69%, 89%);
  border-width: 0 10px 10px 0;
  display: inline-block;
  padding: 20px;
}

.down {
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

/* sets width, padding, margin for the arrow pointing down and centres it*/
.arrow_down{
    width: 20%;
    box-sizing: border-box;
   	max-width: 100px; 
    overflow: hidden;
    padding: min(4em, 1%);
    margin: auto;
}

/* sets a colour, aligns text to the centre and gives a text shadow */
h1,h2{
    color:  hsl(23, 66%, 50%);
    text-align: center;
    text-shadow: 1px 1px 2px #431F0e;
}

/* colours the p and li tags and sizes them */
p,li{
  color: hsl(51, 69%, 89%);
  font-size: clamp(1rem, calc(1.5vw + 0.25rem), 1.5rem);
}

/* sets the size of h1 tags */
h1{
  font-size: clamp(2rem, calc(2vw + 0.75rem), 2.25rem);
}

/* sets the size of h2 tags */
h2{
  font-size: clamp(1.5rem, calc(1.75vw + 0.5rem), 1.75rem);
}

/* sets a colour and gives a text shadow */
strong{
  color:  hsl(23, 66%, 50%);
  text-shadow: 1px 1px 2px #431F0e;
}
 
/* Marker selects only the numbers/dots and styles them */
li::marker {
  font-weight: bold;
  color:  hsl(19, 63%, 24%);
  text-shadow: 1px 1px 2px hsl(19, 63%, 24%); 
}

/* floats the img to the right and sets a height, width, border radius and padding */
.float_right_img{
  float: right;
  height: auto;
  width: 250px;
  border-radius: 50px;
  padding: 20px;
}

/* top parallax on the page */
.parallax_grand_slam {
  /* The image used */
  background-image: url("images/ball_on_hard_court.jpg");

  /* Set a specific height */
  height: 900px; 

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* parallax behind the main content */
.parallax_grand_slam2 {
  /* The image used */
  background-image: url("images/tennis_balls.jpg");

  /* Set a specific height */
  min-height: 800px; 

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 20px;
}

/* text on top of the top parallax image */
.parallax_text_grand_slam h1{
  font-size: 150px;
  color: hsl(51, 69%, 89%);
  font-family: "Inter", sans-serif;
  margin: auto;
  padding: 250px;
  width: 100%;
}

/* top parallax on the page */
.parallax_how_to_play {
  /* The image used */
  background-image: url("images/tennis_ball_on_clay.jpg");

  /* Set a specific height */
  height: 900px; 

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

/* parallax behind the main content */
.parallax_how_to_play2 {
  /* The image used */
  background-image: url("images/clay_courts.jpg");

  /* Set a specific height */
  min-height: 800px; 

  /* Create the parallax scrolling effect */
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  padding-top: 20px;
}
/* ... */

